--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: https://sdisaacson.github.io # the base hostname & protocol for your site, 
 github_username:  sdisaacson
 
 # Build settings
-theme: minima
+theme: minimal
 plugins:
   - jekyll-feed
 
